maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: '}' expected but 'case' found.
  case 1 => { do {
  ^Escaper:31: error: '}' expected but 'case' found.
case _ => {println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")}
^Escaper:33: error: eof expected but '}' found.
}
^